@@ -4,6 +4,7 @@ import static org.hamcrest.Matchers.is;
 import static org.junit.Assert.*;
 
 import java.util.Arrays;
+import java.util.List;
 import org.junit.Test;
 
 public class ConvertList2ArrayTest {
@@ -11,7 +12,7 @@ public class ConvertList2ArrayTest {
   public void when7ElementsThen9() {
     ConvertList2Array list = new ConvertList2Array();
     int[][] result = list.toArray(
-        Arrays.asList(1, 2, 3, 4, 5, 6, 7),
+        List.of(1, 2, 3, 4, 5, 6, 7),
         3
     );
     int[][] expect = {
@@ -26,7 +27,7 @@ public class ConvertList2ArrayTest {
   public void when13ElementsThen18() {
     ConvertList2Array list = new ConvertList2Array();
     int[][] result = list.toArray(
-        Arrays.asList(1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13),
+        List.of(1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13),
         6
     );
     int[][] expect = {
