@@ -14,7 +14,7 @@ public class ConvertListTest {
     List<int[]> in = new ArrayList<>();
     in.add(new int[] {1});
     in.add(new int[] {2, 3});
-    List<Integer> expect = Arrays.asList(1, 2, 3);
+    List<Integer> expect = List.of(1, 2, 3);
     assertThat(ConvertList.convert(in), is(expect));
   }
 
@@ -24,7 +24,7 @@ public class ConvertListTest {
     in.add(new int[] {1});
     in.add(new int[] {2, 3, 4, 5});
     in.add(new int[] {6, 7, 8});
-    List<Integer> expect = Arrays.asList(1, 2, 3, 4, 5, 6, 7, 8);
+    List<Integer> expect = List.of(1, 2, 3, 4, 5, 6, 7, 8);
     assertThat(ConvertList.convert(in), is(expect));
   }
 }
