@@ -11,12 +11,12 @@ import org.junit.Test;
 public class NotifyAccountTest {
   @Test
   public void sent() {
-    List<Account> accounts = Arrays.asList(
+    List<Account> accounts = List.of(
         new Account("123", "Petr Arsentev", "eDer3432f"),
         new Account("142", "Petr Arsentev", "000001")
     );
     HashSet<Account> expect = new HashSet<>(
-        Arrays.asList(
+        List.of(
             new Account("123", "Petr Arsentev", "eDer3432f"),
             new Account("142", "Petr Arsentev", "000001")
         )
@@ -26,13 +26,13 @@ public class NotifyAccountTest {
 
   @Test
   public void sentSimilarPassport() {
-    List<Account> accounts = Arrays.asList(
+    List<Account> accounts = List.of(
         new Account("123", "Petr Arsentev", "eDer3432f"),
         new Account("142", "Petr Arsentev", "000001"),
         new Account("142", "Petr Arsentev", "000002")
     );
     HashSet<Account> expect = new HashSet<>(
-        Arrays.asList(
+        List.of(
             new Account("123", "Petr Arsentev", "eDer3432f"),
             new Account("142", "Petr Arsentev", "000001")
         )
@@ -42,13 +42,13 @@ public class NotifyAccountTest {
 
   @Test
   public void sentSimilarDeposit() {
-    List<Account> accounts = Arrays.asList(
+    List<Account> accounts = List.of(
         new Account("123", "Petr Arsentev", "eDer3432f"),
         new Account("142", "Petr Arsentev", "000001"),
         new Account("147", "Petr Arsentev", "000001")
     );
     HashSet<Account> expect = new HashSet<>(
-        Arrays.asList(
+        List.of(
             new Account("123", "Petr Arsentev", "eDer3432f"),
             new Account("142", "Petr Arsentev", "000001"),
             new Account("147", "Petr Arsentev", "000001")
